Display Property Exercise

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,13 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <!-- your HTML here to implement the colored box design -->
+  <div class="main-container">
+    <div class="box onehalfwidth green"></div>
+    <div class="box onehalfwidth blue"></div>
+    <div class="box onethirdwidth grey"></div>
+    <div class="box onethirdwidth black"></div>
+    <div class="box onethirdwidth yellow"></div>
+  </div>
 </body>
 </html>
